# argdcls

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  py.yml
argdcls/: __init__.py  config.py
tests/: test_config.py  test_mymodule.py
